@@ -56,6 +56,7 @@ import com.google.devtools.build.lib.view.proto.Deps;
 import com.google.errorprone.annotations.CanIgnoreReturnValue;
 import java.io.IOException;
 import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
@@ -213,8 +214,19 @@ public final class JavaHeaderCompileAction extends SpawnAction {
 
     private ImmutableMap<String, String> utf8Environment = null;
 
+    private boolean parallelism = true;
+
+    private String fixDepsTool = null;
+
     private Builder(RuleContext ruleContext) {
       this.ruleContext = ruleContext;
+    }
+
+    @CanIgnoreReturnValue
+    public Builder setFixDepsTool(String fixDepsTool) {
+      checkNotNull(fixDepsTool, "fixDepsTool must not be null");
+      this.fixDepsTool = fixDepsTool;
+      return this;
     }
 
     /** Sets the output jdeps file. */
@@ -400,6 +412,12 @@ public final class JavaHeaderCompileAction extends SpawnAction {
       return this;
     }
 
+    @CanIgnoreReturnValue
+    public Builder enableParallelism(boolean parallelism) {
+      this.parallelism = parallelism;
+      return this;
+    }
+
     /** Builds and registers the action for a header compilation. */
     public void build(JavaToolchainProvider javaToolchain)
         throws RuleErrorException, InterruptedException {
@@ -481,7 +499,7 @@ public final class JavaHeaderCompileAction extends SpawnAction {
               : javaToolchain.getHeaderCompiler();
       // The header compiler is either a jar file that needs to be executed using
       // `java -jar <path>`, or an executable that can be run directly.
-      headerCompiler.addInputs(javaToolchain, mandatoryInputsBuilder);
+      headerCompiler.addInputs(mandatoryInputsBuilder);
       CustomCommandLine.Builder commandLine =
           CustomCommandLine.builder()
               .addExecPath("--output", outputJar)
@@ -497,10 +515,13 @@ public final class JavaHeaderCompileAction extends SpawnAction {
 
       commandLine.add("--javacopts");
       if (!javacOpts.isEmpty()) {
-        commandLine.addObject(javacOpts);
+        commandLine.addObject(filterJavacoptsForTurbine(javacOpts));
       }
       // See b/31371210, b/142059842, and b/464431616.
       commandLine.add("-Aexperimental_turbine_hjar");
+      if (!parallelism) {
+        commandLine.add("-XDnoParallel");
+      }
       // terminate --javacopts with `--` to support javac flags that start with `--`
       commandLine.add("--");
 
@@ -516,6 +537,8 @@ public final class JavaHeaderCompileAction extends SpawnAction {
         }
       }
 
+      commandLine.add("--experimental_fix_deps_tool", fixDepsTool);
+
       ImmutableMap.Builder<String, String> executionInfo = ImmutableMap.builder();
       executionInfo.putAll(
           ruleContext
@@ -526,6 +549,10 @@ public final class JavaHeaderCompileAction extends SpawnAction {
       executionInfo.putAll(
           TargetUtils.getExecutionInfo(
               ruleContext.getRule(), ruleContext.isAllowTagsPropagation()));
+      int cpuReservation = javaConfiguration.experimentalTurbineCpuReservation();
+      if (cpuReservation > 1) {
+        executionInfo.put("cpu:" + cpuReservation, "");
+      }
 
       ActionOwner actionOwner =
           ruleContext.useAutoExecGroups()
@@ -555,7 +582,7 @@ public final class JavaHeaderCompileAction extends SpawnAction {
         commandLine.add("--reduce_classpath_mode", "NONE");
 
         NestedSet<Artifact> allInputs = mandatoryInputsBuilder.build();
-        CustomCommandLine executableLine = headerCompiler.getCommandLine(javaToolchain);
+        CustomCommandLine executableLine = headerCompiler.getCommandLine();
 
         ruleContext.registerAction(
             new JavaHeaderCompileAction(
@@ -611,7 +638,7 @@ public final class JavaHeaderCompileAction extends SpawnAction {
 
       NestedSet<Artifact> mandatoryInputs = mandatoryInputsBuilder.build();
 
-      CustomCommandLine executableLine = headerCompiler.getCommandLine(javaToolchain);
+      CustomCommandLine executableLine = headerCompiler.getCommandLine();
 
       ruleContext.registerAction(
           new JavaCompileAction(
@@ -649,5 +676,88 @@ public final class JavaHeaderCompileAction extends SpawnAction {
         return PROGRESS_MESSAGE_PREFIX;
       }
     }
+  }
+
+  private static final ImmutableSet<String> TURBINE_USED_FLAGS =
+      ImmutableSet.of("-source", "--source", "-target", "--target", "--release", "-proc:none");
+
+  // Set of standard javac options that take exactly 1 argument.
+  // This is used to correctly skip arguments of options not used by Turbine.
+  //
+  // This can be best-effort, it's unusual that a flag argument would look like a flag, this is
+  // defending against things like an output directory named `--release`.
+  private static final ImmutableSet<String> ONE_ARG_FLAGS =
+      ImmutableSet.of(
+          "-source",
+          "--source",
+          "-target",
+          "--target",
+          "--release",
+          "-d",
+          "-s",
+          "-h",
+          "-encoding",
+          "-cp",
+          "-classpath",
+          "--class-path",
+          "-bootclasspath",
+          "--boot-class-path",
+          "-processor",
+          "-processorpath",
+          "--processor-path",
+          "-profile",
+          "--limit-modules",
+          "--add-modules",
+          "--module-path",
+          "-p",
+          "--upgrade-module-path",
+          "--system",
+          "--module-source-path",
+          "--module-version",
+          "--processor-module-path",
+          "--add-exports",
+          "--add-reads",
+          "--patch-module",
+          "-Xmaxerrs",
+          "-Xmaxwarns",
+          "-Xstdout",
+          "-Xplugin",
+          "-Xprefer",
+          "-Xdiags",
+          "-Xpkginfo",
+          "-extdirs",
+          "-endorseddirs");
+
+  public static ImmutableList<String> filterJavacoptsForTurbine(ImmutableList<String> javacopts) {
+    ImmutableList.Builder<String> result = ImmutableList.builder();
+    Iterator<String> it = javacopts.iterator();
+    while (it.hasNext()) {
+      String opt = it.next();
+      if (ONE_ARG_FLAGS.contains(opt)) {
+        if (it.hasNext()) {
+          String val = it.next();
+          if (TURBINE_USED_FLAGS.contains(opt)) {
+            result.add(opt).add(val);
+          }
+        } else {
+          if (TURBINE_USED_FLAGS.contains(opt)) {
+            result.add(opt);
+          }
+        }
+      } else if (opt.startsWith("--release=")
+          || opt.startsWith("--source=")
+          || opt.startsWith("--target=")) {
+        result.add(opt);
+      } else if (opt.startsWith("-A")) {
+        result.add(opt);
+      } else if (opt.startsWith("-XD")) {
+        if (opt.equals("-XDnoParallel") || opt.startsWith("-XDturbine")) {
+          result.add(opt);
+        }
+      } else if (opt.equals("-proc:none")) {
+        result.add(opt);
+      }
+    }
+    return result.build();
   }
 }
